--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node-sass port of thoughtbot's Bourbon library",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha --reporter spec --recursive --growl"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,10 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lacroixdesign/node-bourbon/issues"
+  },
+  "devDependencies": {
+    "chai": "~1.8.1",
+    "mocha": "~1.14.0",
+    "node-sass": "~0.7.0"
   }
 }
