--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "devDependencies": {
     "chai": "^1.10.0",
     "mocha": "^2.1.0",
-    "node-sass": "^1.2.3"
+    "node-sass": "2.0.0-beta"
   }
 }
