--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-bourbon",
-  "version": "4.2.1-beta1",
+  "version": "4.2.1",
   "description": "node-sass wrapper for thoughtbot's bourbon library",
   "main": "index.js",
   "scripts": {
